--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --watch src --exec ts-node src/main.ts",
+    "start": "ts-node ./src/main.ts",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
