--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mercato-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "This documentation outlines the tasks for interns. Each task involves creating various endpoints for different functionalities. Interns will need to create Data Transfer Objects (DTOs), collection functions, and routes for each endpoint, and also consume them to ensure they work as expected.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,13 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
-    "ts-node": "^10.9.2"
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "@prisma/client": "^5.17.0",
@@ -28,6 +30,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "prisma": "^5.17.0"
+    "@types/node": "^20.14.12",
+    "@types/nodemailer": "^6.4.15",
+    "prisma": "^5.17.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
