chnaged forgotpassword to passworddto.ts

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:2244@localhost:5432/postgres?schema=jay"
-EMAIL_USER=your-email@example.com
-EMAIL_PASS=your-email-password
+EMAIL_USER=guissepemukuka17@gmail.com
+EMAIL_PASS=Joseph_2244
