--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
   "name": "mercato-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch src --exec ts-node src/main.ts",
     "start": "ts-node ./src/main.ts",
     "postinstall": "prisma generate"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "http-status-codes": "^2.3.0",
-    "morgan": "^1.10.0"
+    "http-status-codes": "^2.1.4",
+    "morgan": "^1.10.0",
+    "prisma": "^5.0.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
-    "@prisma/client": "^5.17.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "prisma": "^5.17.0"
+    "nodemon": "^2.0.7"
   }
 }
