--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgres://default:ZYDtz1mrbc3p@ep-snowy-lake-a4dmo2gk.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"sss
+PRISMA_CLIENT_ENGINE_TYPE=binary
