--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:2244@localhost:5432/postgres?schema=jay"
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_email_password
+EMAIL_USER="guissepemukuka17@gmail.com"
+EMAIL_PASS="2244"
