--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="postgresql://postgres:2244@localhost:5432/postgres?schema=jay"
 EMAIL_USER="guissepemukuka17@gmail.com"
-EMAIL_PASS="2244"
+EMAIL_PASS="egji rgrs erus xavz"
