--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
